--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
 	<dependencies>
-	<dependency>
+		<dependency>
 			<groupId>org.apache.tomcat.embed</groupId>
 			<artifactId>tomcat-embed-core</artifactId>
 			<version>${tomcat.version}</version>
@@ -47,9 +47,14 @@
 			<version>${tomcat.version}</version>
 		</dependency>
 		<dependency>
-    			<groupId>javax.websocket</groupId>
-    			<artifactId>javax.websocket-api</artifactId>
-    			<version>1.1</version>
+			<groupId>org.apache.tomcat.embed</groupId>
+			<artifactId>tomcat-embed-websocket</artifactId>
+			<version>{tomcat.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>javax.websocket</groupId>
+			<artifactId>javax.websocket-api</artifactId>
+			<version>1.1</version>
 		</dependency>
 	</dependencies>
 	<build>
