--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 	<version>1.0-SNAPSHOT</version>
 	<name>WebSockets</name>
 	<properties>
-		<tomcat.version>7.0.34</tomcat.version>
+		<tomcat.version>8.0.20</tomcat.version>
 		<jersey.version>1.8</jersey.version>
 		<jackson.version>2.5.0</jackson.version>
 		<target.version>1.7</target.version>
@@ -49,7 +49,7 @@
 		<dependency>
 			<groupId>org.apache.tomcat.embed</groupId>
 			<artifactId>tomcat-embed-websocket</artifactId>
-			<version>{tomcat.version}</version>
+			<version>${tomcat.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>javax.websocket</groupId>
